traning/networking/5-1-1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: net
spec:
  containers:
    - name: web
      image: nginx
    - name: centos
      image: centos
      command: ["/bin/sh", "-c","while : ;do curl http://localhost:80/; sleep 10; done"]
