traning/networking/3-2-3_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    project: chapter3
    Service: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
